@@ -1334,8 +1334,7 @@ These match if the argument is `eql' to VAL."
 
 (defconst cl--generic--unreachable-types
   ;; FIXME: Try to make that list empty?
-  '(fixnum bignum boolean keyword
-    special-form subr-primitive subr-native-elisp)
+  '(keyword)
   "Built-in classes on which we cannot dispatch for technical reasons.")
 
 (defun cl--generic-type-specializers (tag &rest _)
@@ -1345,8 +1344,7 @@ These match if the argument is `eql' to VAL."
            (cl--class-allparents class)))))
 
 (cl-generic-define-generalizer cl--generic-typeof-generalizer
-  ;; FIXME: We could also change `type-of' to return `null' for nil.
-  10 (lambda (name &rest _) `(if ,name (type-of ,name) 'null))
+  10 (lambda (name &rest _) `(cl-type-of ,name))
   #'cl--generic-type-specializers)
 
 (cl-defmethod cl-generic-generalizers :extra "typeof" (type)
